add basic version of Dijkstra algorithm without step list
