# API/main.py
@@ -1,6 +1,6 @@
 from flask import Flask, request, jsonify
 from flask_swagger_ui import get_swaggerui_blueprint
-from models.graph import BFSGraph, DFSGraph, KruskalGraph, PrimDijkstraGraph
+from models.graph import BFSGraph, DFSGraph, KruskalGraph, PrimDijkstraGraph, DijkstraGraph
 from models.edge import Edge, edge_sort
 from bisect import insort
 
@@ -59,11 +59,24 @@ def PrimDijkstra():
     graph = PrimDijkstraGraph(vertices, adjacency_list, weights, current_vertex)
     return jsonify(graph.find_minimum_spinning_tree())
 
+@app.route("/api/Dijkstra", methods=['POST'])
+def Dijkstra():
+    print(l.index(1))
+    request_data = request.get_json(force=True)
+    vertices = request_data['vertices']
+    adjacency_list = request_data['adjacency_list']
+    weights = request_data['weights']
+    current_vertex = request_data['start_vertex']
+    graph = DijkstraGraph(vertices, adjacency_list, weights, current_vertex)
+    return jsonify(graph.find_shortest_paths())
+
 
 if __name__ == '__main__':
     app.register_blueprint(swaggerui_blueprint, url_prefix=SWAGGER_URL)
     # app.register_blueprint(swaggerui_blueprint, url_prefix='/')
     # app.register_blueprint(swaggerui_blueprint, url_prefix='/api')
+
+    l = [2, 1, 5, 2, 1]
 
     app.run(debug=True)
 
