# API/static/swagger.json
@@ -552,6 +552,179 @@
           }
         }
       }
+    },
+    "/api/Dijkstra": {
+      "post": {
+        "tags": [
+          "Finding Shortest Paths Algorithm"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "Dijkstra",
+            "required": true,
+            "description": "Returns a step list of Dijkstra algorithm",
+            "schema": {
+              "$ref": "#/components/schemas/network_Kruskal_input"
+            },
+            "examples": {
+              "graph": {
+                "value": {
+                  "start_vertex": 0,
+                  "vertices": [
+                    0, 1, 2, 3, 4, 5, 6, 7, 8
+                  ],
+                  "adjacency_list": [
+                    [
+                        1, 2, 3, 7
+                    ],
+                    [
+                        0, 7
+                    ],
+                    [
+                        0, 4, 8
+                    ],
+                    [
+                        0, 4, 5, 6
+                    ],
+                    [
+                        2, 3, 8
+                    ],
+                    [
+                        3, 6, 7
+                    ],
+                    [
+                        3, 5, 8
+                    ],
+                    [
+                        0, 1, 5
+                    ],
+                    [
+                        2, 4, 6
+                    ]
+                  ],
+                  "weights": [
+                    [
+                        2, 5, 1, 3
+                    ],
+                    [
+                        2, 8
+                    ],
+                    [
+                        5, 2, 2
+                    ],
+                    [
+                        1, 4, 1, 5
+                    ],
+                    [
+                        2, 4, 4
+                    ],
+                    [
+                        1, 3, 2
+                    ],
+                    [
+                        5, 3, 7
+                    ],
+                    [
+                        3, 8, 2
+                    ],
+                    [
+                        2, 4, 7
+                    ]
+                  ]
+                }
+              }
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/network_Kruskal_input"
+              },
+              "examples": {
+                "graph": {
+                  "value": {
+                    "start_vertex": 0,
+                    "vertices": [
+                      0, 1, 2, 3, 4, 5, 6, 7, 8
+                    ],
+                    "adjacency_list": [
+                      [
+                          1, 2, 3, 7
+                      ],
+                      [
+                          0, 7
+                      ],
+                      [
+                          0, 4, 8
+                      ],
+                      [
+                          0, 4, 5, 6
+                      ],
+                      [
+                          2, 3, 8
+                      ],
+                      [
+                          3, 6, 7
+                      ],
+                      [
+                          3, 5, 8
+                      ],
+                      [
+                          0, 1, 5
+                      ],
+                      [
+                          2, 4, 6
+                      ]
+                    ],
+                    "weights": [
+                      [
+                          2, 5, 1, 3
+                      ],
+                      [
+                          2, 8
+                      ],
+                      [
+                          5, 2, 2
+                      ],
+                      [
+                          1, 4, 1, 5
+                      ],
+                      [
+                          2, 4, 4
+                      ],
+                      [
+                          1, 3, 2
+                      ],
+                      [
+                          5, 3, 7
+                      ],
+                      [
+                          3, 8, 2
+                      ],
+                      [
+                          2, 4, 7
+                      ]
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        },
+        "summary": "Returns a step list of BFS",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/components/schemas/BFS_output"
+            }
+          }
+        }
+      }
     }
   },
   "components": {
